@@ -1,37 +1,29 @@
-## detailed info like DEBUG goes to detail.log; INFO level goes to core.log
-log4j.rootCategory=INFO, stdout, main
-
+log4j.rootCategory=INFO, stdout
 
 # Custom appender for logging most important messages only
-log4j.logger.core=INFO, core
-log4j.appender.core=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.core.Threshold=INFO
-log4j.appender.core.File=./logs/core.log
-log4j.appender.core.layout=org.apache.log4j.PatternLayout
-log4j.appender.core.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.core.DatePattern='.'yyyy-MM-dd
-log4j.appender.core.Append=true
-
-# Custom appender for logging most important messages only
-log4j.logger.status=INFO, status
+log4j.logger.status=INFO, status, summary, detail
 log4j.appender.status=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.status.Threshold=INFO
-log4j.appender.status.File=./logs/status.log
+log4j.appender.status.File=logs/status.log
 log4j.appender.status.layout=org.apache.log4j.PatternLayout
 log4j.appender.status.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.status.DatePattern='.'yyyy-MM-dd
-log4j.appender.status.Append=false
+log4j.appender.status.DatePattern='.'yyyy-MM
+log4j.appender.status.Append=true
 
-# log main
-log4j.logger.main=INFO, main
-log4j.additivity.main=false
-log4j.appender.main=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.main.Threshold=DEBUG
-log4j.appender.main.File=logs/main.log
-log4j.appender.main.layout=org.apache.log4j.PatternLayout
-log4j.appender.main.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.main.DatePattern='.'yyyy-MM-dd
-log4j.appender.main.Append=false
+log4j.appender.summary=org.apache.log4j.FileAppender
+log4j.appender.summary.Threshold=INFO
+log4j.appender.summary.File=logs/summary.log
+log4j.appender.summary.layout=org.apache.log4j.PatternLayout
+log4j.appender.summary.layout.ConversionPattern=%m%n
+log4j.appender.summary.Append=false
+
+log4j.appender.detail=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.detail.Threshold=DEBUG
+log4j.appender.detail.File=logs/detail.log
+log4j.appender.detail.layout=org.apache.log4j.PatternLayout
+log4j.appender.detail.layout.ConversionPattern=%d %p [%c] - %m%n
+log4j.appender.detail.DatePattern='.'yyyy-MM
+log4j.appender.detail.Append=true
 
 
 # Standard output appender
