@@ -1,3 +1,6 @@
+Oct 3, 2019
+- improved logging
+
 v. 1.0.6, Jan 28, 2019
 - updated build.gradle
 
